# computer-graphics-lab-4

./: .gitmodules  CMakeLists.txt  config.json
libs/: CMakeLists.txt
src/: clipping.h  container.h  line.h  main.cpp  shape.h
